--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,3 +3,33 @@
 @import "tailwindcss/utilities";
 
 /* This file is for your main application CSS */
+@font-face {
+  font-family: "WorkSans";
+  src: url("/fonts/WorkSans-Regular.ttf");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "WorkSans";
+  src: url("/fonts/WorkSans-Bold.ttf");
+  font-weight: 700;
+  font-style: normal;
+}
+
+.dropdown-menu {
+  @apply absolute right-0 top-full mt-2 bg-dark-400 rounded-md shadow-lg w-48;
+}
+
+.dropdown-menu::before {
+  content: "";
+  @apply absolute right-3 -top-1 transform rotate-45 border-4 border-dark-400;
+}
+
+.menu-item {
+  @apply text-white p-2 block transition-colors duration-300;
+}
+
+.menu-item:hover {
+  @apply bg-white/10;
+}
