--- a/lib/gist_clone_web/live/create_gist_live.html.heex
+++ b/lib/gist_clone_web/live/create_gist_live.html.heex
@@ -1,5 +1,5 @@
 <.flash_group flash={@flash} />
-<div class="h-full bg-gradient-to-t from-lavender-900/20 to-dark">
+<div class="h-full bg-gradient-to-t from-dark to-lavender-900/20">
   <h1 class="text-2xl font-bold text-white text-center py-10">
     Instantly share Elixir code, notes, and snippets.
   </h1>
@@ -21,13 +21,28 @@
             phx-debounce="blur"
           />
         </div>
-        <.input
-          field={@form[:markup_text]}
-          placeholder="Enter your code..."
-          type="textarea"
-          class="flex rounded-b-lg rounded-t-none bg-dark/30 border-transparent text-white"
-          phx-debounce="blur"
-        />
+        <div
+          id="line-numbers-container"
+          class="grid grid-cols-[82px_1fr] w-full"
+          phx-update="ignore"
+        >
+          <textarea
+            id="line-numbers"
+            class="mt-1 min-h-52 text-right outline-none rounded-lg border-none bg-transparent  text-white leading-3 resize-none overflow-hidden"
+            readonly
+          >
+          <%= "1\n" %>
+          </textarea>
+          <.input
+            field={@form[:markup_text]}
+            placeholder="Enter your code..."
+            type="textarea"
+            class="flex-1 rounded-b-lg rounded-t-none bg-dark/30 border-transparent border-none text-white w-full h-full"
+            phx-debounce="blur"
+            phx-hook="UpdateLineNumbers"
+            id="markup-text"
+          />
+        </div>
       </div>
 
       <.button
