feat: implementation of tab key inside the markup text input

--- a/lib/gist_clone_web/live/create_gist_live.html.heex
+++ b/lib/gist_clone_web/live/create_gist_live.html.heex
@@ -30,6 +30,7 @@
             id="line-numbers"
             class="mt-1 min-h-52 text-right outline-none rounded-lg border-none bg-transparent  text-white leading-3 resize-none overflow-hidden"
             readonly
+            tabindex="-1"
           >
           <%= "1\n" %>
           </textarea>
