--- a/lib/gist_clone_web/live/create_gist_live.html.heex
+++ b/lib/gist_clone_web/live/create_gist_live.html.heex
@@ -28,7 +28,7 @@
         >
           <textarea
             id="line-numbers"
-            class="mt-1 min-h-52 text-right outline-none rounded-lg border-none bg-transparent  text-white leading-3 resize-none overflow-hidden"
+            class="mt-1 min-h-52 text-right outline-none rounded-lg border-none bg-transparent text-gray-400 leading-3 resize-none overflow-hidden"
             readonly
             tabindex="-1"
           >
