--- a/lib/gist_clone_web/live/gist_live.html.heex
+++ b/lib/gist_clone_web/live/gist_live.html.heex
@@ -14,8 +14,8 @@
       </div>
     </div>
     <div class="flex items-center  text-white">
-      <.button class="block bg-lavender-900 hover:bg-lavender border border-lavender-900 p-2 rounded-l-lg">
-        <.icon name="hero-bookmark" class="w-5 h-5" /> Salvar
+      <.button class="flex items-center gap-1 bg-lavender-900 hover:bg-lavender border border-lavender-900 p-2 rounded-l-lg ">
+        <.icon name="hero-bookmark-solid" class="w-5 h-5" /> Salvar
       </.button>
       <span class="py-2 px-3 rounded-r-lg border border-lavender-900">
         0
@@ -32,14 +32,27 @@
       <div class="bg-dark-400/50 text-white text-sm font-bold py-2 px-4 rounded-t-lg flex justify-between items-center">
         {@gist.name}
         <div>
-          <.button class="bg-transparent hover:bg-dark-400 p-2 rounded-lg transition-all duration-300">
-            <.icon name="hero-pencil" class="w-5 h-5" />
+          <.button
+            :if={@gist.user_id == @current_user.id}
+            class="bg-transparent hover:bg-dark-400 p-2 rounded-lg transition-all duration-300 active:scale-50"
+          >
+            <.icon name="hero-pencil-solid" class="w-5 h-5" />
           </.button>
-          <.button class="bg-transparent hover:bg-dark-400 p-2 rounded-lg transition-all duration-300">
-            <.icon name="hero-clipboard" class="w-5 h-5" />
+          <.button
+            class="bg-transparent hover:bg-dark-400 p-2 rounded-lg transition-all duration-300 active:scale-50"
+            id="copy-to-clipboard"
+            phx-hook="CopyToClipboard"
+            data-clipboard={@gist.markup_text}
+          >
+            <.icon name="hero-document-duplicate-solid" class="w-5 h-5" />
           </.button>
-          <.button class="bg-transparent hover:bg-dark-400 p-2 rounded-lg transition-all duration-300">
-            <.icon name="hero-trash" class="w-5 h-5" />
+          <.button
+            :if={@gist.user_id == @current_user.id}
+            class="bg-transparent hover:bg-dark-400 p-2 rounded-lg transition-all duration-300 active:scale-50"
+            phx-click="delete"
+            phx-value-id={@gist.id}
+          >
+            <.icon name="hero-trash-solid" class="w-5 h-5" />
           </.button>
         </div>
       </div>
