--- a/lib/gist_clone_web/live/create_gist_live.html.heex
+++ b/lib/gist_clone_web/live/create_gist_live.html.heex
@@ -1,57 +1,11 @@
 <.flash_group flash={@flash} />
-<div class="h-full bg-gradient-to-t from-dark to-lavender-900/20">
-  <h1 class="text-2xl font-bold text-white text-center py-10">
-    Instantly share Elixir code, notes, and snippets.
-  </h1>
-  <div class="w-1/2 mx-auto">
-    <.form for={@form} class="flex flex-col gap-6" phx-change="validate" phx-submit="create">
-      <.input
-        field={@form[:description]}
-        placeholder="Gist description..."
-        class="mt-0 bg-dark/90 border border-gray-500 text-white"
-        phx-debounce="blur"
-      />
-
-      <div class="flex flex-col border border-gray-500 rounded-lg">
-        <div class=" p-3 bg-dark-400/50 rounded-t-lg">
-          <.input
-            field={@form[:name]}
-            placeholder="Filename including extension"
-            class="mt-0 bg-dark/90 border border-gray-500 text-white"
-            phx-debounce="blur"
-          />
-        </div>
-        <div
-          id="line-numbers-container"
-          class="grid grid-cols-[82px_1fr] w-full"
-          phx-update="ignore"
-        >
-          <textarea
-            id="line-numbers"
-            class="mt-1 min-h-52 text-right outline-none rounded-lg border-none bg-transparent text-gray-400 leading-3 resize-none overflow-hidden"
-            readonly
-            tabindex="-1"
-          >
-          <%= "1\n" %>
-          </textarea>
-          <.input
-            field={@form[:markup_text]}
-            placeholder="Enter your code..."
-            type="textarea"
-            class="flex-1 rounded-b-lg rounded-t-none bg-dark/30 border-transparent border-none text-white w-full h-full"
-            phx-debounce="blur"
-            phx-hook="UpdateLineNumbers"
-            id="markup-text"
-          />
-        </div>
-      </div>
-
-      <.button
-        class="!bg-lavender-900 hover:bg-lavender w-32 self-end"
-        phx-disable-with="Creating..."
-      >
-        Create gist
-      </.button>
-    </.form>
-  </div>
+<h1 class="text-2xl font-bold text-white text-center pt-5">
+  Instantly share Elixir code, notes, and snippets.
+</h1>
+<div class="w-1/2 mx-auto py-10">
+  <.live_component
+    module={GistCloneWeb.GistFormComponent}
+    id={:new_gist}
+    current_user={@current_user}
+  />
 </div>
