feat: format gist date and time

--- a/lib/gist_clone_web/live/gist_live.html.heex
+++ b/lib/gist_clone_web/live/gist_live.html.heex
@@ -9,7 +9,7 @@
         </div>
         <div class="text-white">
           <p>{@gist.description}</p>
-          <p class="text-sm text-gray-400">{@gist.updated_at}</p>
+          <p class="text-sm text-gray-400">{@gist.formatted_time}</p>
         </div>
       </div>
     </div>
