--- a/lib/gist_clone_web/components/layouts/app.html.heex
+++ b/lib/gist_clone_web/components/layouts/app.html.heex
@@ -54,7 +54,7 @@
   </div>
 </header>
 
-<main class="bg-gradient-to-t from-dark to-lavender-900/20">
+<main class="bg-gradient-to-t from-dark to-lavender-900/20 flex flex-col ">
   <.flash_group flash={@flash} />
   {@inner_content}
 </main>
