--- a/lib/gist_clone_web/live/all_gists_live.html.heex
+++ b/lib/gist_clone_web/live/all_gists_live.html.heex
@@ -1,7 +1,17 @@
 <div class="max-w-screen-lg mx-auto">
   <h1 class="text-2xl font-bold text-white text-center pt-5">All Gists</h1>
 
-  <%= for gist <- @gists do %>
-    <.gist gist={gist} />
-  <% end %>
+  <.form for={@search_gist} phx-change="search" phx-submit="search" class="my-4">
+    <.input
+      type="text"
+      debounce="500"
+      name="search"
+      label="Search your gists"
+      value=""
+      placeholder="Search..."
+    />
+    <%= for gist <- @gists do %>
+      <.gist gist={gist} />
+    <% end %>
+  </.form>
 </div>
